--- a/index.html
+++ b/index.html
@@ -107,11 +107,12 @@
   </section>
 
   <section class="contact">
-    <h2>Contato</h2>
-    <p>Email: <a href="mailto:valeria@advocacia.com">valeria@advocacia.com</a></p>
-    <p>WhatsApp: (11) 99999-9999</p>
-    <p>Endereço: Rua Exemplo, 123 - São Paulo/SP</p>
-  </section>
+  <h2>Contato</h2>
+  <p>Email: <a href="mailto:valgiraldi@adv.oabsp.org.br">valgiraldi@adv.oabsp.org.br</a></p>
+  <p>WhatsApp: <a href="https://wa.me/5516997019231" target="_blank">(16) 99701-9231</a></p>
+  <p>Endereço: Rua Exemplo, 123 - São Paulo/SP</p>
+</section>
+
 
   <footer>
     © 2025 Valéria Giraldi - Advocacia | OAB/SP 472974
