--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   </header>
 
   <section class="hero">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Scales_of_Justice_gold.svg/120px-Scales_of_Justice_gold.svg.png" alt="Balança da Justiça">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Scales_of_Justice_gold.svg/120px-Scales_of_Justice_gold.svg.png" alt="Justiça">
     <h1>Defendendo seus direitos com ética e excelência</h1>
   </section>
 
@@ -101,7 +101,7 @@
       <li>Direito Civil</li>
       <li>Direito de Família e Sucessões</li>
       <li>Direito do Consumidor</li>
-      <li>Inventários e Partilhas</li>
+      <li>Direito Tributário</li>
       <li>Contratos e Assessoria Jurídica</li>
     </ul>
   </section>
@@ -110,7 +110,7 @@
   <h2>Contato</h2>
   <p>Email: <a href="mailto:valgiraldi@adv.oabsp.org.br">valgiraldi@adv.oabsp.org.br</a></p>
   <p>WhatsApp: <a href="https://wa.me/5516997019231" target="_blank">(16) 99701-9231</a></p>
-  <p>Endereço: Rua Exemplo, 123 - São Paulo/SP</p>
+  <p>Endereço: Rua Major Cravalho Filho, 1012 - Araraquara - São Paulo/SP</p>
 </section>
 
 
