--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <h2>Contato</h2>
   <p>Email: <a href="mailto:valgiraldi@adv.oabsp.org.br">valgiraldi@adv.oabsp.org.br</a></p>
   <p>WhatsApp: <a href="https://wa.me/5516997019231" target="_blank">(16) 99701-9231</a></p>
-  <p>Endereço: Rua Major Cravalho Filho, 1012 - Araraquara - São Paulo/SP</p>
+  <p>Endereço: Rua Major Carvalho Filho, 1012 - Araraquara - São Paulo/SP</p>
 </section>
 
 
