--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <h2>Áreas de Atuação</h2>
     <ul>
       <li>Direito Civil</li>
-      <li>Direito de Família e Sucessões</li>
+      <li>Direito de Família e Sucessões-Holding Familiar</li>
       <li>Direito do Consumidor</li>
       <li>Direito Tributário</li>
       <li>Contratos e Assessoria Jurídica</li>
