--- a/index.html
+++ b/index.html
@@ -91,16 +91,16 @@
   </header>
 
   <section class="hero">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Scales_of_Justice_gold.svg/120px-Scales_of_Justice_gold.svg.png" alt="Justiça">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Scales_of_Justice_gold.svg/120px-Scales_of_Justice_gold.svg.png" alt="COMPROMISSO COM A JUSTIÇA">
     <h1>Defendendo seus direitos com ética e excelência</h1>
   </section>
 
   <section class="areas">
     <h2>Áreas de Atuação</h2>
     <ul>
-      <li>Direito Civil</li>
-      <li>Direito de Família e Sucessões-Holding Familiar</li>
+      <li>Direito de Família e Sucessões - Holding Familiar</li>
       <li>Direito do Consumidor</li>
+      <li>Direito do Civil</li>
       <li>Direito Tributário</li>
       <li>Contratos e Assessoria Jurídica</li>
     </ul>
