--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   </header>
 
   <section class="hero">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Scales_of_Justice_gold.svg/120px-Scales_of_Justice_gold.svg.png" alt="COMPROMISSO COM A JUSTIÇA">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Scales_of_Justice_gold.svg/120px-Scales_of_Justice_gold.svg.png" alt="COMPROMISSO">
     <h1>Defendendo seus direitos com ética e excelência</h1>
   </section>
 
